WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
25627
HTMLMediaElement: some errors should fire on <source> elements
https://bugs.webkit.org/show_bug.cgi?id=25627
Summary
HTMLMediaElement: some errors should fire on <source> elements
Eric Carlson
Reported
2009-05-07 12:46:28 PDT
Update for HTML5 spec change to fire 'error' events on <source> element when there is a failure while processing/loading a <source>.
Attachments
Add attachment
proposed patch, testcase, etc.
Eric Carlson
Comment 1
2009-05-08 11:39:55 PDT
http://trac.webkit.org/changeset/43403
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug